manual page for gfreg(1)

--- a/gfarm_v2/branches/2.4/doc/docbook/en/ref/man1/gfreg.1.docbook
+++ b/gfarm_v2/branches/2.4/doc/docbook/en/ref/man1/gfreg.1.docbook
@@ -3,7 +3,7 @@
 
 <refentry id='gfreg.1'>
 
-<refentryinfo><date>5 Apr 2006</date></refentryinfo>
+<refentryinfo><date>4 Apr 2011</date></refentryinfo>
 
 <refmeta>
 <refentrytitle>gfreg</refentrytitle>
@@ -13,68 +13,17 @@
 
 <refnamediv id='name'>
 <refname>gfreg</refname>
-<refpurpose>register a Gfarm file, Gfarm file fragments, or a Gfarm directory</refpurpose>
+<refpurpose>copy a file into the Gfarm file system</refpurpose>
 </refnamediv>
 
 <refsynopsisdiv id='synopsis'>
 <cmdsynopsis>
   <command>gfreg</command>
-    <arg choice='opt'>-p </arg>
     <group choice='opt'>
       <arg choice='plain'>-h <replaceable>filesystem-node</replaceable></arg>
-      <arg choice='plain'>-H <replaceable>hostfile</replaceable></arg>
-      <arg choice='plain'>-D <replaceable>domainname</replaceable></arg>
-    </group>
-    <arg choice='opt'>-a <replaceable>architecture</replaceable></arg>
-    <!-- arg choice='opt'>-N <replaceable>num-of-replicas</replaceable></arg -->
-    <arg choice='plain'><replaceable>program</replaceable></arg>
-    <arg choice='plain'>...</arg>
-    <arg choice='plain'><replaceable>gfarm-URL</replaceable></arg>
-</cmdsynopsis>
-
-<cmdsynopsis>
-  <command>gfreg</command>
-    <arg choice='opt'>-i </arg>
-    <group choice='opt'>
-      <arg choice='plain'>-h <replaceable>filesystem-node</replaceable></arg>
-      <arg choice='plain'>-H <replaceable>hostfile</replaceable></arg>
-      <arg choice='plain'>-D <replaceable>domainname</replaceable></arg>
     </group>
     <arg choice='plain'><replaceable>localfile</replaceable></arg>
-    <arg choice='plain'>...</arg>
-    <arg choice='plain'><replaceable>gfarm-URL</replaceable></arg>
-</cmdsynopsis>
-
-<cmdsynopsis>
-  <command>gfreg</command>
-    <arg choice='plain'>-N <replaceable>total-num-of-fragments</replaceable></arg>
-    <arg choice='plain'>-I <replaceable>fragment-index</replaceable></arg>
-    <group choice='opt'>
-      <arg choice='plain'>-h <replaceable>filesystem-node</replaceable></arg>
-      <arg choice='plain'>-H <replaceable>hostfile</replaceable></arg>
-      <arg choice='plain'>-D <replaceable>domainname</replaceable></arg>
-    </group>
-    <arg choice='plain'><replaceable>localfile</replaceable></arg>
-    <arg choice='plain'>...</arg>
-    <arg choice='plain'><replaceable>gfarm-URL</replaceable></arg>
-</cmdsynopsis>
-
-<cmdsynopsis>
-  <command>gfreg</command>
-    <arg choice='plain'>-r</arg>
-    <group choice='opt'>
-      <arg choice='plain'>-h <replaceable>filesystem-node</replaceable></arg>
-      <arg choice='plain'>-H <replaceable>hostfile</replaceable></arg>
-      <arg choice='plain'>-D <replaceable>domainname</replaceable></arg>
-    </group>
-    <arg choice='opt'>-a <replaceable>architecture</replaceable></arg>
-    <group choice='opt'>
-      <arg choice='plain'><replaceable>directory</replaceable></arg>
-      <arg choice='plain'><replaceable>program</replaceable></arg>
-      <arg choice='plain'><replaceable>localfile</replaceable></arg>
-    </group>
-    <arg choice='plain'>...</arg>
-    <arg choice='plain'><replaceable>gfarm-URL</replaceable></arg>
+    <arg choice='plain'><replaceable>Gfarm-URL</replaceable></arg>
 </cmdsynopsis>
 </refsynopsisdiv>
 
@@ -82,78 +31,10 @@
 
 <refsect1 id='description'><title>DESCRIPTION</title>
 
-<para>The first form copies and registers the
-<parameter>program</parameter> as a Gfarm file
-<parameter>gfarm-URL</parameter> in the Gfarm filesystem.  When
-<parameter>gfarm-URL</parameter> is a directory, multiple programs
-can be specified.  After the registration, the
-<parameter>gfarm-URL</parameter> can be specified as a program name of
-gfrun(1) and gfmpirun_p4(1).  Without the <option>-p</option> option,
-only executable file can be specified.  With the <option>-p</option>
-option, non-executable file can be specified as well.  Without the
-<option>-a</option> option or the <option>-h</option>
-option, architecture of the <parameter>program</parameter> is assumed
-to be the same architecture as the client host on that gfreg(1) is
-executed, which is obtained by the Gfarm metaserver.
-<!--
-The
-<option>-N</option> option specifies the number of file replicas.
-When it is omitted, one file replica is created.  The destination
-filesystem nodes are automatically selected among filesystem nodes of
-the same architecture.
- -->
-</para>
-
-<para>The second form registers one or more
-<parameter>localfile</parameter>s as a single Gfarm file.  Without the
-<option>-i</option> option, only non-executable file can be specified
-as <parameter>localfile</parameter>.  With the <option>-i</option>
-option, both excutable and non-executable file can be specified as
-<parameter>localfile</parameter>. 
-The destination filesystem node will be automatically selected by CPU
-load average.  With any one of <option>-h</option>, <option>-H</option>, 
-<option>-D</option> options, filesystem node can be limited.
-</para>
-
-<para>The third form registers <parameter>localfile</parameter> as a
-file fragment of a Gfarm file.  The total number of fragments and the
-fragment index are specified by the <option>-N</option> option and the
-<option>-I</option> option, respectively.  When
-<parameter>gfarm-URL</parameter> is a directory, multiple
-<parameter>localfile</parameter>s can be specified.
-The destination filesystemnode will be automatically decided by CPU
-load average unless any one of <option>-h</option>,
-<option>-H</option>, <option>-D</option> options is explicitly
-specified.  When the gfreg command of this form is executed on a
-filesystem node, the local filesystem node is always selected rather
-than a remote filesystemnode.  In this case, <option>-h</option>,
-<option>-H</option>, <option>-D</option> options help to store files
-dispersively.
-</para>
-
-<para>The fourth form registers the <parameter>directory</parameter>
-as a Gfarm directory <parameter>gfarm-URL</parameter>, the
-<parameter>program</parameter> or the <parameter>localfile</parameter>
-as a Gfarm file <parameter>gfarm-URL</parameter>.
-If <parameter>directory</parameter> have some sub directories and/or
-files, they will be registered recursively.  The non-executable file 
-<parameter>localfile</parameter> will be registered as a file has
-one fragment.  A non-executable file in the
-<parameter>directory</parameter> will be registered in the same way.
-When <parameter>gfarm-URL</parameter> already exists as a directory,
-multiple <parameter>directorie</parameter>s,
-<parameter>program</parameter>s, and <parameter>localfile</parameter>s
-can be specified and they will be registered in
-<parameter>gfarm-URL</parameter>.  They can be mixed in parameteres,
-while other forms inhibit this manner.
-If <parameter>gfarm-URL</parameter> does not exist, one
-<parameter>directory</parameter> or one
-<parameter>program</parameter>, or one
-<parameter>localfile</parameter> can be specified and it will be
-registered as <parameter>gfarm-URL</parameter>.
-Refer to the first form's part above to specify filesystem node
-thatprogfarms and files will reside with the <option>-a</option>
-option or the <option>-h</option> option.
+<para>Copy a file specified by <parameter>localfile</parameter> to a
+file specified by <parameter>Gfarm-URL</parameter> in the Gfarm file
+system.  The Gfarm-URL can be a full path name in the Gfarm file
+system or a Gfarm URL such as gfarm://metaserver:port/path/name.
 </para>
 
 </refsect1>
@@ -161,9 +42,9 @@ option or the <option>-h</option> option.
 <refsect1 id='options'><title>OPTIONS</title>
 <variablelist>
 <varlistentry>
-<term><option>-f</option></term>
+<term><option>-h</option> <parameter>filesystem-node</parameter></term>
 <listitem>
-<para>overwrites gfarm-URL even if it exits as a Gfarm file.</para>
+<para>explicitly specifies the file system node to be stored.</para>
 </listitem>
 </varlistentry>
 <varlistentry>
