--- a/gfarm_v2/branches/2.4/doc/docbook/en/ref/man1/gfexport.1.docbook
+++ b/gfarm_v2/branches/2.4/doc/docbook/en/ref/man1/gfexport.1.docbook
@@ -3,7 +3,7 @@
 
 <refentry id='gfexport.1'>
 
-<refentryinfo><date>1 May 2002</date></refentryinfo>
+<refentryinfo><date>4 Apr 2011</date></refentryinfo>
 
 <refmeta>
 <refentrytitle>gfexport</refentrytitle>
@@ -13,21 +13,20 @@
 
 <refnamediv id='name'>
 <refname>gfexport</refname>
-<refpurpose>print on the standard output</refpurpose>
+<refpurpose>print a file in the Gfarm file system on the standard output</refpurpose>
 </refnamediv>
 <refsynopsisdiv id='synopsis'>
 <cmdsynopsis>
   <command>gfexport</command>
-    <arg choice='opt'>-H <replaceable>hostfile</replaceable></arg>
-    <arg choice='opt'>-I <replaceable>fragment-index</replaceable></arg>
-    <arg choice='plain'><replaceable>gfarm-URL</replaceable></arg>
+    <arg choice='opt'>-h <replaceable>filesystem-node</replaceable></arg>
+    <arg choice='plain'><replaceable>Gfarm-URL</replaceable></arg>
 </cmdsynopsis>
 </refsynopsisdiv>
 
 <!-- body begins here -->
 
 <refsect1 id='description'><title>DESCRIPTION</title>
-<para><command>gfexport</command> outputs a Gfarm file specified by <parameter>gfarm-URL</parameter> to
+<para><command>gfexport</command> outputs a Gfarm file specified by <parameter>Gfarm-URL</parameter> to
 the standard output.</para>
 
 </refsect1>
@@ -36,27 +35,10 @@ the standard output.</para>
 <variablelist>
 
 <varlistentry>
-<term><option>-H</option> <parameter>hostfile</parameter></term>
+<term><option>-h</option> <parameter>filesystem-node</parameter></term>
 <listitem>
-<para>specifies a list of filesystem nodes explicitly to be accessed.
-<parameter>hostfile</parameter> contains of a hostname that stores the corresponding
-file fragment in each line.  When the -H option is specified, the -I
-option cannot be specified.
+<para>explicitly specifies a filesystem node to be accessed.
 </para>
-<para>
-if ``-'' is specified, the standard input is used to read the host
-list.</para>
-</listitem>
-</varlistentry>
-
-<varlistentry>
-<term><option>-I</option> <parameter>fragment-index</parameter></term>
-<listitem>
-<para>outputs the only specified fragment index.</para>
-<para>If the <parameter>gfarm-URL</parameter> is an executable file, an architecture name,
-for example, sparc-sun-solaris8, can be used to specify the executable
-architecture.  When the -I option is specified, the -H option cannot
-be specified.</para>
 </listitem>
 </varlistentry>
 
