--- a/gfarm_v2/trunk/doc/docbook/en/ref/man1/gfchown.1.docbook
+++ b/gfarm_v2/trunk/doc/docbook/en/ref/man1/gfchown.1.docbook
@@ -2,7 +2,7 @@
 
 <refentry id='gfchown.1'>
 
-<refentryinfo><date>21 Dec 2008</date></refentryinfo>
+<refentryinfo><date>19 Apr 2011</date></refentryinfo>
 
 <refmeta>
 <refentrytitle>gfchown</refentrytitle>
@@ -43,6 +43,13 @@
 <refsect1 id='options'><title>OPTIONS</title>
 
 <variablelist>
+
+<varlistentry>
+<term><option>-h</option></term>
+<listitem>
+<para>Affects symbolic links instead of referenced files/directories.</para>
+</listitem>
+</varlistentry>
 
 <varlistentry>
 <term><option>-?</option></term>
