--- a/gfarm_v2/trunk/man/ja/man1/gfchown.1
+++ b/gfarm_v2/trunk/man/ja/man1/gfchown.1
@@ -3,7 +3,7 @@
 .\" <http://shell.ipoline.com/~elmert/comp/docbook2X/> 
 .\" Please send any bug reports, improvements, comments, patches, 
 .\" etc. to Steve Cheng <steve@ggi-project.org>.
-.TH "GFCHOWN" "1" "21 December 2008" "Gfarm" ""
+.TH "GFCHOWN" "1" "19 April 2011" "Gfarm" ""
 
 .SH NAME
 gfchown \- Gfarm ファイルの所有者，所有グループを変更する
@@ -18,6 +18,10 @@ gfchown \- Gfarm ファイルの所有者，所有グループを変更する
 .PP
 Gfarm ファイルの所有者，所有グループを変更します．
 .SH "OPTIONS"
+.TP
+\fB-h\fR
+シンボリックリンクの指すファイル／ディレクトリではなく、
+シンボリック自身の所有者，所有グループを変更します。
 .TP
 \fB-?\fR
 引数オプションを表示します．
