--- a/gfarm_v2/trunk/man/man1/gfchgrp.1
+++ b/gfarm_v2/trunk/man/man1/gfchgrp.1
@@ -3,7 +3,7 @@
 .\" <http://shell.ipoline.com/~elmert/comp/docbook2X/> 
 .\" Please send any bug reports, improvements, comments, patches, 
 .\" etc. to Steve Cheng <steve@ggi-project.org>.
-.TH "GFCHGRP" "1" "21 December 2008" "Gfarm" ""
+.TH "GFCHGRP" "1" "19 April 2011" "Gfarm" ""
 
 .SH NAME
 gfchgrp \- change Gfarm file group
@@ -15,6 +15,9 @@ gfchgrp \- change Gfarm file group
 .PP
 \fBgfchgrp\fR changes a group of Gfarm files.
 .SH "OPTIONS"
+.TP
+\fB-h\fR
+Affects symbolic links instead of referenced files/directories.
 .TP
 \fB-?\fR
 Displays a list of command options.
