--- a/gfarm_v2/trunk/man/man1/gfchmod.1
+++ b/gfarm_v2/trunk/man/man1/gfchmod.1
@@ -3,7 +3,7 @@
 .\" <http://shell.ipoline.com/~elmert/comp/docbook2X/> 
 .\" Please send any bug reports, improvements, comments, patches, 
 .\" etc. to Steve Cheng <steve@ggi-project.org>.
-.TH "GFCHMOD" "1" "21 December 2008" "Gfarm" ""
+.TH "GFCHMOD" "1" "19 April 2011" "Gfarm" ""
 
 .SH NAME
 gfchmod \- change Gfarm file permission
@@ -15,6 +15,9 @@ gfchmod \- change Gfarm file permission
 .PP
 \fBgfchmod\fR changes a permission of Gfarm files.
 .SH "OPTIONS"
+.TP
+\fB-h\fR
+Affects symbolic links instead of referenced files/directories.
 .TP
 \fB-?\fR
 Displays a list of command options.
