--- a/gfarm_v2/branches/2.4/man/ja/man1/gfchgrp.1
+++ b/gfarm_v2/branches/2.4/man/ja/man1/gfchgrp.1
@@ -3,7 +3,7 @@
 .\" <http://shell.ipoline.com/~elmert/comp/docbook2X/> 
 .\" Please send any bug reports, improvements, comments, patches, 
 .\" etc. to Steve Cheng <steve@ggi-project.org>.
-.TH "GFCHGRP" "1" "21 December 2008" "Gfarm" ""
+.TH "GFCHGRP" "1" "19 April 2011" "Gfarm" ""
 
 .SH NAME
 gfchgrp \- Gfarm ファイルの所有グループを変更する
@@ -15,6 +15,10 @@ gfchgrp \- Gfarm ファイルの所有グループを変更する
 .PP
 Gfarm ファイルの所有グループを変更します．
 .SH "OPTIONS"
+.TP
+\fB-h\fR
+シンボリックリンクの指すファイル／ディレクトリではなく、
+シンボリック自身の所有グループを変更します。
 .TP
 \fB-?\fR
 引数オプションを表示します．
