--- a/gfarm_v2/branches/2.4/man/man1/gfchown.1
+++ b/gfarm_v2/branches/2.4/man/man1/gfchown.1
@@ -3,7 +3,7 @@
 .\" <http://shell.ipoline.com/~elmert/comp/docbook2X/> 
 .\" Please send any bug reports, improvements, comments, patches, 
 .\" etc. to Steve Cheng <steve@ggi-project.org>.
-.TH "GFCHOWN" "1" "21 December 2008" "Gfarm" ""
+.TH "GFCHOWN" "1" "19 April 2011" "Gfarm" ""
 
 .SH NAME
 gfchown \- change Gfarm file owner and group
@@ -18,6 +18,9 @@ gfchown \- change Gfarm file owner and group
 .PP
 \fBgfchown\fR changes an owner and a group of Gfarm files.
 .SH "OPTIONS"
+.TP
+\fB-h\fR
+Affects symbolic links instead of referenced files/directories.
 .TP
 \fB-?\fR
 Displays a list of command options.
