--- a/gfarm_v2/trunk/doc/docbook/en/ref/man5/gfarm2.conf.5.docbook
+++ b/gfarm_v2/trunk/doc/docbook/en/ref/man5/gfarm2.conf.5.docbook
@@ -1179,7 +1179,7 @@ The default is 30 seconds.
 <varlistentry>
 <term><token>record_atime </token><parameter>validity</parameter></term>
 <listitem>
-<para>When "enabled" is specified, Gfarm records last access time strictly.
+<para>When "enable" is specified, Gfarm records last access time strictly.
 When "disabled" is specified, the access time becomes inaccurate, but
 such setting reduces the load of metadata updates, and may improve
 performance.
@@ -1197,7 +1197,7 @@ The "disable" setting corresponds to "noatime" setting in usual filesystem.
 <varlistentry>
 <term><token>profile </token><parameter>validity</parameter></term>
 <listitem>
-<para>When "enabled" is specified, Gfarm outputs the profile information.
+<para>When "enable" is specified, Gfarm outputs the profile information.
 </para>
 
 <para>Example:</para>
@@ -1215,39 +1215,11 @@ The master gfmd is specified for the head. The slave gfmds are specified from th
 If port is not specified, port will be 601 which is the default value.
 </para>
 <para>
-This parameter is only available in gfmd.conf only when the configuration is done with --enable-metadata-replication. This parameter is always available in gfarm2.conf.
+This parameter is only available in gfarm2.conf, and ignored in gfmd.conf.
 </para>
 <para>Example:</para>
 <literallayout>
 	metadb_server_list mdsmaster mdsslave:701
-</literallayout>
-</listitem>
-</varlistentry>
-
-<varlistentry>
-<term><token>synchronous_replication</token> <parameter>validity</parameter></term>
-<listitem>
-<para>This parameter specifies the timing of the metadata replication.
-When "enable" is specified, the synchronous replication is selected.
-When "disable" is specified, the asynchronous replication is selected.
-The default is "enable".
-</para>
-<para>
-The synchronous replication completes both sending update information to
-all slave gfmds connected and calling fdatasync against the journal file.
-</para>
-<para>
-The asynchronous replication completes only calling fdatasync against the jounral
-when the gfmd recieves the client requests.
-On the other side, the resident thread sends update information
-stored in the journal file to the slaves connected.
-</para>
-<para>
-This parameter is only available in gfmd.conf only when the configuration is done with --enable-metadata-replication. In other cases, this parameter is ingored.
-</para>
-<para>Example:</para>
-<literallayout>
-	synchronous_replication disable
 </literallayout>
 </listitem>
 </varlistentry>
@@ -1263,7 +1235,7 @@ the slave gfmd connects.
 The default is 10.
 </para>
 <para>
-This parameter is only available in gfmd.conf only when the configuration is done with --enable-metadata-replication. In other cases, this parameter is ingored.
+This parameter is only available in gfmd.conf.
 </para>
 <para>Example:</para>
 <literallayout>
@@ -1282,11 +1254,44 @@ to transaction-end in one transaction.
 The default is "enable".
 </para>
 <para>
-This parameter is only available in gfmd.conf only when the configuration is done with --enable-metadata-replication. In other cases, this parameter is ingored.
+This parameter is only available in gfmd.conf.
 </para>
 <para>Example:</para>
 <literallayout>
 	synchronous_journaling disable
+</literallayout>
+</listitem>
+</varlistentry>
+
+<varlistentry>
+<term><token>metadb_server_force_slave</token> <parameter>validity</parameter></term>
+<listitem>
+<para>When "enable" is specified, even if the gfmd is set to default master,
+it run as slave gfmd forcedly.
+The default is "disable".
+</para>
+<para>
+This parameter is only available in gfmd.conf.
+</para>
+<para>Example:</para>
+<literallayout>
+	metadb_server_force_slave enable
+</literallayout>
+</listitem>
+</varlistentry>
+
+<varlistentry>
+<term><token>metadb_server_slave_max_size</token> <parameter>number</parameter></term>
+<listitem>
+<para>This parameter specifies the maximum number of slave gfmds.
+The default is "32".
+</para>
+<para>
+This parameter is only available in gfmd.conf.
+</para>
+<para>Example:</para>
+<literallayout>
+	metadb_server_slave_max_size 40
 </literallayout>
 </listitem>
 </varlistentry>
@@ -1299,7 +1304,7 @@ The value of this parameter is specified at config-gfarm execution .
 When this parameter is not specified, the gfmd does not start.
 </para>
 <para>
-This parameter is only available in gfmd.conf only when the configuration is done with --enable-metadata-replication. In other cases, this parameter is ingored.
+This parameter is only available in gfmd.conf.
 </para>
 <para>Example:</para>
 <literallayout>
@@ -1316,7 +1321,7 @@ Beware that the larger the size is, the longer it takes time for the gfmd to com
 The default is 33554432 (32 MBytes).
 </para>
 <para>
-This parameter is only available in gfmd.conf only when the configuration is done with --enable-metadata-replication. In other cases, this parameter is ingored.
+This parameter is only available in gfmd.conf.
 </para>
 <para>Example:</para>
 <literallayout>
@@ -1386,9 +1391,10 @@ notation.</para>
 <!--		&nbsp;&nbsp;&lt;record_atime_statement&gt; | -->
 		&nbsp;&nbsp;&lt;profile_statement&gt; |
 		&nbsp;&nbsp;&lt;metadb_server_list_statement&gt; |
-		&nbsp;&nbsp;&lt;synchronous_replication_statement&gt; |
 		&nbsp;&nbsp;&lt;synchronous_replication_timeout_statement&gt; |
 		&nbsp;&nbsp;&lt;synchronous_journaling_statement&gt; |
+		&nbsp;&nbsp;&lt;metadb_server_force_slave_statement&gt; |
+		&nbsp;&nbsp;&lt;metadb_server_slave_max_size_statement&gt; |
 		&nbsp;&nbsp;&lt;metadb_journal_dir_statement&gt; |
 		&nbsp;&nbsp;&lt;metadb_journal_max_size_statement&gt;
 	&lt;spool_statement&gt; ::= "spool" &lt;pathname&gt;
@@ -1479,9 +1485,10 @@ notation.</para>
 	&lt;metadb_server_list_spec&gt; ::=
 		&nbsp;&nbsp;&lt;hostname_port_spec&gt; |
 		&nbsp;&nbsp;&lt;hostname_port_spec&gt; &lt;metadb_server_list_spec&gt;
-	&lt;synchronous_replication_statement&gt; ::= "synchronous_replication" &lt;validity&gt;
 	&lt;synchronous_replication_timeout_statement&gt; ::= "synchronous_replication_timeout" &lt;number&gt;
 	&lt;synchronous_journaling_statement&gt; ::= "synchronous_journaling" &lt;validity&gt;
+	&lt;metadb_server_force_slave_statement&gt; ::= "metadb_server_force_slave" &lt;validity&gt;
+	&lt;metadb_server_slave_max_size_statement&gt; ::= "metadb_server_slave_max_size" &lt;number&gt;
 	&lt;metadb_journal_dir_statement&gt; ::= "metadb_journal_dir" &lt;pathname&gt;
 	&lt;metadb_journal_max_size_statement&gt; ::= "metadb_journal_max_size" &lt;number&gt;
 	&lt;hostspec&gt; ::= &lt;ipv4_address&gt; | &lt;ipv4_address&gt; "/" &lt;address_mask&gt; |
