--- a/gfarm_v2/trunk/man/ja/man5/gfarm2.conf.5
+++ b/gfarm_v2/trunk/man/ja/man5/gfarm2.conf.5
@@ -3,7 +3,7 @@
 .\" <http://shell.ipoline.com/~elmert/comp/docbook2X/> 
 .\" Please send any bug reports, improvements, comments, patches, 
 .\" etc. to Steve Cheng <steve@ggi-project.org>.
-.TH "GFARM2.CONF" "5" "18 3æœˆ 2011" "Gfarm" ""
+.TH "GFARM2.CONF" "5" "08 6æœˆ 2011" "Gfarm" ""
 
 .SH NAME
 gfarm2.conf \- GfarmÀßÄê¥Õ¥¡¥¤¥ë
@@ -790,35 +790,12 @@ Gfarm¥¯¥é¥¤¥¢¥ó¥È¥é¥¤¥Ö¥é¥ê¤Ï¥Õ¥¡¥¤¥ë¥·¥¹¥Æ¥à¥Î¡¼¥É¤¬ÍøÍÑ²ÄÇ½¤Ë¤Ê¤ë¤Þ¤Ç»î¹Ô¤ò·«¤
 ÀèÆ¬¤Ë¥Þ¥¹¥¿¡¼gfmd¡¢2ÈÖÌÜ°Ê¹ß¤Ë¥¹¥ì¡¼¥Ögfmd¤ò»ØÄê¤·¤Þ¤¹¡£
 ¥Ý¡¼¥ÈÈÖ¹æ¤ò¾ÊÎ¬¤¹¤ë¤È¥Ç¥Õ¥©¥ë¥È¤Î601¤ò»ØÄê¤·¤¿¤³¤È¤Ë¤Ê¤ê¤Þ¤¹¡£
 
-¤³¤ÎÊ¸¤Ïgfmd.conf¤Ë¤ª¤¤¤Æ¤Ïconfigure»þ¤Ë --enable-metadata-replication¤ò»ØÄê¤·¤¿¤È¤­¤Ë¤Î¤ßÍ­¸ú¤Ç¤¢¤ê¡¢¤½¤ì°Ê³°¤Î¾ì¹ç¤ÏÌµ»ë¤µ¤ì¤Þ¤¹¡£gfarm2.conf¤Ë¤ª¤¤¤Æ¤Ï¡¢¾ï¤ËÍ­¸ú¤Ç¤¹¡£
+¤³¤ÎÊ¸¤Ïgfarm2.conf¤Î¤ß¤ÇÍ­¸ú¤Ç¤¢¤ê¡¢gfmd.conf¤Ç¤ÏÌµ»ë¤µ¤ì¤Þ¤¹¡£
 
 Îã:
 
 .nf
 	metadb_server_list mdsmaster mdsslave:701
-.fi
-.TP
-\fBsynchronous_replication \fIÍ­¸úÀ­\fB\fR
-¥á¥¿¥Ç¡¼¥¿¥ì¥×¥ê¥±¡¼¥·¥ç¥ó¤Î¥¿¥¤¥ß¥ó¥°¤òÀßÄê¤·¤Þ¤¹¡£
-¤³¤Î¥ª¥×¥·¥ç¥ó¤¬enable¤Î¾ì¹ç¡¢Æ±´ü¥ì¥×¥ê¥±¡¼¥·¥ç¥ó¤¬ÁªÂò¤µ¤ì¡¢
-disable¤Î¾ì¹ç¡¢ÈóÆ±´ü¥ì¥×¥ê¥±¡¼¥·¥ç¥ó¤¬ÁªÂò¤µ¤ì¤Þ¤¹¡£
-¥Ç¥Õ¥©¥ë¥È¤Ïenable¤Ç¤¹¡£
-
-Æ±´ü¥ì¥×¥ê¥±¡¼¥·¥ç¥ó¤Ï¥¯¥é¥¤¥¢¥ó¥È¤«¤é¤Î¥ê¥¯¥¨¥¹¥È¤ËÂÐ¤·¤ÆÊÖ¿®¤¹¤ëÁ°¤Ë¡¢
-ÀÜÂ³Ãæ¤ÎÁ´¤Æ¤Î¥¹¥ì¡¼¥Ögfmd¤Ø¤Î¹¹¿·¾ðÊóÁ÷¿®¤È¡¢
-¥¸¥ã¡¼¥Ê¥ë¥Õ¥¡¥¤¥ë¤Îfdatasync¤ò´°Î»¤·¤Þ¤¹¡£
-
-ÈóÆ±´ü¥ì¥×¥ê¥±¡¼¥·¥ç¥ó¤Ï¥¯¥é¥¤¥¢¥ó¥È¤«¤é¤Î¥ê¥¯¥¨¥¹¥È»þ¤Ë¤Ï¡¢
-¥¸¥ã¡¼¥Ê¥ë¥Õ¥¡¥¤¥ë¤Îfdatasync¤À¤±¤ò¹Ô¤¤¤Þ¤¹¡£
-°ìÊý¤Ç¡¢¾ïÃó¥¹¥ì¥Ã¥É¤¬¥¸¥ã¡¼¥Ê¥ë¥Õ¥¡¥¤¥ë¤ËÊÝÂ¸¤µ¤ì¤¿¹¹¿·¾ðÊó¤ò¡¢
-ÀÜÂ³Ãæ¤ÎÁ´¤Æ¤Î¥¹¥ì¡¼¥Ögfmd¤ØÁ÷¿®¤·¤Þ¤¹¡£
-
-¤³¤ÎÊ¸¤Ïgfmd.conf¤Î¤ß¤ÇÍ­¸ú¤Ç¤¹¡£configure»þ¤Ë--enable-metadata-replication¤ò»ØÄê¤·¤¿¤È¤­¤Ë¤Î¤ßÍ­¸ú¤Ç¤¢¤ê¡¢¤½¤ì°Ê³°¤Î¾ì¹ç¤ÏÌµ»ë¤µ¤ì¤Þ¤¹¡£
-
-Îã:
-
-.nf
-	synchronous_replication disable
 .fi
 .TP
 \fBsynchronous_replication_timeout \fIÉÃ¿ô\fB\fR
@@ -827,7 +804,7 @@ disable¤Î¾ì¹ç¡¢ÈóÆ±´ü¥ì¥×¥ê¥±¡¼¥·¥ç¥ó¤¬ÁªÂò¤µ¤ì¤Þ¤¹¡£
 ÀÜÂ³¤¬ÀÚÃÇ¤·¤¿¥¹¥ì¡¼¥Ögfmd¤Ø¤Î¥ì¥×¥ê¥±¡¼¥·¥ç¥ó¤Ï¡¢¥¹¥ì¡¼¥Ögfmd¤¬ºÆÀÜÂ³¤·¤Æ¤¯¤ë¤Þ¤ÇÃæÃÇ¤·¤Þ¤¹¡£
 ¥Ç¥Õ¥©¥ë¥È¤Ï 10 ¤Ç¤¹¡£
 
-¤³¤ÎÊ¸¤Ïgfmd.conf¤Î¤ß¤ÇÍ­¸ú¤Ç¤¹¡£configure»þ¤Ë--enable-metadata-replication¤ò»ØÄê¤·¤¿¤È¤­¤Ë¤Î¤ßÍ­¸ú¤Ç¤¢¤ê¡¢¤½¤ì°Ê³°¤Î¾ì¹ç¤ÏÌµ»ë¤µ¤ì¤Þ¤¹¡£
+¤³¤ÎÊ¸¤Ïgfmd.conf¤Î¤ß¤ÇÍ­¸ú¤Ç¤¹¡£
 
 Îã:
 
@@ -840,7 +817,7 @@ disable¤Î¾ì¹ç¡¢ÈóÆ±´ü¥ì¥×¥ê¥±¡¼¥·¥ç¥ó¤¬ÁªÂò¤µ¤ì¤Þ¤¹¡£
 ¼Â¹Ô¤¹¤ë¥¿¥¤¥ß¥ó¥°¤Ï¡¢1¤Ä¤Î¥È¥é¥ó¥¶¥¯¥·¥ç¥ó¤Î³«»Ï¤«¤é½ªÎ»¤Þ¤Ç¤Î¥ì¥³¡¼¥É¤ò½ñ¤­¹þ¤ó¤À¸å¤Ç¤¹¡£
 ¥Ç¥Õ¥©¥ë¥È¤Ïenable¤Ç¤¹¡£
 
-¤³¤ÎÊ¸¤Ïgfmd.conf¤Î¤ß¤ÇÍ­¸ú¤Ç¤¹¡£configure»þ¤Ë--enable-metadata-replication¤ò»ØÄê¤·¤¿¤È¤­¤Ë¤Î¤ßÍ­¸ú¤Ç¤¢¤ê¡¢¤½¤ì°Ê³°¤Î¾ì¹ç¤ÏÌµ»ë¤µ¤ì¤Þ¤¹¡£
+¤³¤ÎÊ¸¤Ïgfmd.conf¤Î¤ß¤ÇÍ­¸ú¤Ç¤¹¡£
 
 Îã:
 
@@ -848,12 +825,35 @@ disable¤Î¾ì¹ç¡¢ÈóÆ±´ü¥ì¥×¥ê¥±¡¼¥·¥ç¥ó¤¬ÁªÂò¤µ¤ì¤Þ¤¹¡£
 	synchronous_journaling disable
 .fi
 .TP
+\fBmetadb_server_force_slave \fIÍ­¸úÀ­\fB\fR
+enable ¤Î¤È¤­¡¢¥Ç¥Õ¥©¥ë¥È¤Î¥Þ¥¹¥¿¡¼gfmd¤È¤·¤ÆÀßÄê¤µ¤ì¤Æ¤¤¤ë¾ì¹ç¤Ç¤â¡¢¥¹¥ì¡¼¥Ögfmd¤È¤·¤Æµ¯Æ°¤·¤Þ¤¹¡£
+¥Ç¥Õ¥©¥ë¥È¤Ïdisable¤Ç¤¹¡£
+
+¤³¤ÎÊ¸¤Ïgfmd.conf¤Î¤ß¤ÇÍ­¸ú¤Ç¤¹¡£
+
+Îã:
+
+.nf
+	metadb_server_force_slave enable
+.fi
+.TP
+\fBmetadb_server_slave_max_size \fI¥Î¡¼¥É¿ô\fB\fR
+¥¹¥ì¡¼¥Ögfmd¤ÎºÇÂç¥Î¡¼¥É¿ô¤ò»ØÄê¤·¤Þ¤¹¡£¥Ç¥Õ¥©¥ë¥È¤Ï16¤Ç¤¹¡£
+
+¤³¤ÎÊ¸¤Ïgfmd.conf¤Î¤ß¤ÇÍ­¸ú¤Ç¤¹¡£
+
+Îã:
+
+.nf
+	metadb_server_slave_max_size 40
+.fi
+.TP
 \fBmetadb_journal_dir \fI¥¸¥ã¡¼¥Ê¥ë¥Ç¥£¥ì¥¯¥È¥ê\fB\fR
 ¥¸¥ã¡¼¥Ê¥ë¥Õ¥¡¥¤¥ë¤ÎÊÝÂ¸¥Ç¥£¥ì¥¯¥È¥ê¤ò»ØÄê¤·¤Þ¤¹¡£
 ¤³¤Î¥ª¥×¥·¥ç¥ó¤Ïconfig-gfarm¤Ç»ØÄê¤·¤Þ¤¹¡£
 ¤³¤Î¥ª¥×¥·¥ç¥ó¤¬»ØÄê¤µ¤ì¤Æ¤¤¤Ê¤¤¾ì¹ç¡¢gfmd¤Ïµ¯Æ°¤·¤Þ¤»¤ó¡£
 
-¤³¤ÎÊ¸¤Ïgfmd.conf¤Î¤ß¤ÇÍ­¸ú¤Ç¤¹¡£configure»þ¤Ë--enable-metadata-replication¤ò»ØÄê¤·¤¿¤È¤­¤Ë¤Î¤ßÍ­¸ú¤Ç¤¢¤ê¡¢¤½¤ì°Ê³°¤Î¾ì¹ç¤ÏÌµ»ë¤µ¤ì¤Þ¤¹¡£
+¤³¤ÎÊ¸¤Ïgfmd.conf¤Î¤ß¤ÇÍ­¸ú¤Ç¤¹¡£
 
 Îã:
 
@@ -866,7 +866,7 @@ disable¤Î¾ì¹ç¡¢ÈóÆ±´ü¥ì¥×¥ê¥±¡¼¥·¥ç¥ó¤¬ÁªÂò¤µ¤ì¤Þ¤¹¡£
 ¥µ¥¤¥º¤¬Âç¤­¤¤¤Û¤É¡¢gfmd¤¬µ¯Æ°´°Î»¤¹¤ë¤Þ¤Ç¤Î»þ´Ö¤¬Ä¹¤¯¤Ê¤ë¤³¤È¤ËÃí°Õ¤·¤Æ¤¯¤À¤µ¤¤¡£
 ¥Ç¥Õ¥©¥ë¥È¤Ï 33554432 (32 MBytes)¤Ç¤¹¡£
 
-¤³¤ÎÊ¸¤Ïgfmd.conf¤Î¤ß¤ÇÍ­¸ú¤Ç¤¹¡£configure»þ¤Ë--enable-metadata-replication¤ò»ØÄê¤·¤¿¤È¤­¤Ë¤Î¤ßÍ­¸ú¤Ç¤¢¤ê¡¢¤½¤ì°Ê³°¤Î¾ì¹ç¤ÏÌµ»ë¤µ¤ì¤Þ¤¹¡£
+¤³¤ÎÊ¸¤Ïgfmd.conf¤Î¤ß¤ÇÍ­¸ú¤Ç¤¹¡£
 
 Îã:
 
@@ -925,9 +925,10 @@ gfarm2.conf¤ÎÊ¸Ë¡¤òBNF¤Çµ­½Ò¤¹¤ë¤È¡¢²¼µ­¤Î¤è¤¦¤Ë¤Ê¤ê¤Þ¤¹¡£
 		\~\~<log_message_verbose_level_statement> |
 		\~\~<profile_statement> |
 		\~\~<metadb_server_list_statement> |
-		\~\~<synchronous_replication_statement> |
 		\~\~<synchronous_replication_timeout_statement> |
 		\~\~<synchronous_journaling_statement> |
+		\~\~<metadb_server_force_slave_statement> |
+		\~\~<metadb_server_slave_max_size_statement> |
 		\~\~<metadb_journal_dir_statement> |
 		\~\~<metadb_journal_max_size_statement>
 	<spool_statement> ::= "spool" <pathname>
@@ -1004,9 +1005,10 @@ gfarm2.conf¤ÎÊ¸Ë¡¤òBNF¤Çµ­½Ò¤¹¤ë¤È¡¢²¼µ­¤Î¤è¤¦¤Ë¤Ê¤ê¤Þ¤¹¡£
 	<metadb_server_list_spec> ::=
 		\~\~<hostname_port_spec> |
 		\~\~<hostname_port_spec> <metadb_server_list_spec>
-	<synchronous_replication_statement> ::= "synchronous_replication" <validity>
 	<synchronous_replication_timeout_statement> ::= "synchronous_replication_timeout" <number>
 	<synchronous_journaling_statement> ::= "synchronous_journaling" <validity>
+	<metadb_server_force_slave_statement> ::= "metadb_server_force_slave" <validity>
+	<metadb_server_slave_max_size_statement> ::= "metadb_server_slave_max_size" <number>
 	<metadb_journal_dir_statement> ::= "metadb_journal_dir" <pathname>
 	<metadb_journal_max_size_statement> ::= "metadb_journal_max_size" <number>
 	<hostspec> ::= <ipv4_address> | <ipv4_address> "/" <address_mask> |
